--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "author": "Regiko04",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
